--- a/al-folio/_data/socials.yml
+++ b/al-folio/_data/socials.yml
@@ -20,7 +20,7 @@ github_username: meikeullrich # your GitHub user name
 # lastfm_id: # your lastfm id
 # lattes_id: # your ID on Lattes (Brazilian Lattes CV)
 # leetcode_id: # your LeetCode id
-linkedin_username: # your LinkedIn user name
+linkedin_username: meikeullrich # your LinkedIn user name
 # mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 # medium_username: # your Medium username
 orcid_id: 0000-0003-3747-4229 # your ORCID ID
